fixed alignment

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -110,7 +110,8 @@ $btn-font-color:#1145d7;
             margin-left: 12%;
             margin-top: 5%;
             .info-title {
-                font-size: 40px;
+                font-size: 36px;
+                width: 600px;
                 font-weight: 500;
             }
             .info{
@@ -136,6 +137,7 @@ $btn-font-color:#1145d7;
         background-color: black;
         height: 100%;
         width: 35%;
+        max-width: 630px;
         margin-left: -8%;
         box-shadow: 10px 13px 16px -1px rgba(0,0,0,0.75);
         -webkit-box-shadow: 10px 13px 16px -1px rgba(0,0,0,0.75);
@@ -143,38 +145,42 @@ $btn-font-color:#1145d7;
         transform: skewX(-23deg);
         border-radius: 27px 20px;
         .info{
-            transform: skewX(23deg);
+            // transform: skewX(23deg);
             margin-top: 100px;
             .amount-info{
+                transform: skewX(23deg);
                 margin-top: 30px;
                 display: flex;
                 flex-direction: row;
                 font-size: 20px;
-                margin-left: 80px;
+                margin-left: 40px;
+                width: 100%;
                 .amount-figure{
                     margin-left: auto;
-                    margin-right: 50px;
+                    margin-right: 60px;
                 }
                 .days-left{
-
                     margin-left: auto;
                     margin-right: 100px;
-                    font-size: 26px;
+                    font-size: 28px;
                 }
             }
             .sold-out{
-                margin-top: 100px;
+                transform: skewX(23deg);
+                margin-top: 80px;
                 font-size: 22px;
                 font-weight: bold;
                 letter-spacing: 3px;
                 /* margin-left: 50%; */
                 /* transform: translate(-50%); */
-                margin-left: -40px;
+                // margin-left: -40px;
                 text-align: center;
             }
             .progress-bar-container{
-                margin-top: 20px;
+                margin-top: 30px;
                 width: 80%;
+                margin-left: 50%;
+                transform: translate(-50%);
                 .amount-progress-bar{
                     height: 7px;
                     border-radius: 5px;
@@ -199,100 +205,158 @@ $btn-font-color:#1145d7;
 
 .tiers-header{
     margin-top: 50px;
-    height: 350px;
+    height: 100%;
     display: flex;
     flex-direction: row;
     margin-left: 1%;
     .tiers-desc{
-        font-size: 24px;
+        font-size: 22px;
         margin-top: 2%;
         margin-right: 1%;
         font-weight: 700;
         width: 800px;
-        letter-spacing: 1.5px;
-        line-height: 40px;
+        letter-spacing: 1.5008px;
+        line-height: 30px;
     }
     .btn-connect {
         width: 370px;
         height: 70px;
         margin-left: 50%;
-        margin-top: 50px;
+        transform: translate(-50%,0);
+        margin-top: 30px;
+        margin-bottom: 50px;
         line-height: 70px;
-        transform: translate(-50%,10px);
+    }
+    .tiers-img{
+        height: 300px;
     }
 }
 
-.phase-container {
-    width: 95%;
+// .phase-container-1 {
+//     width: 95%;
+//     height: 650px;
+//     margin-top: 150px;
+//     // border: 1px solid gold;
+//     transform: translate(-50%,0);
+//     margin-left: 50%;
+//     display: flex;
+//     flex-direction: row;
+//     .phase-desc{
+//         font-family: "Exo", sans-serif;
+//         color: white;
+//         font-size: 20px;
+//         width: 45%;
+//         margin-top: 2%;
+//         line-height: 30px;
+//         font-weight: 700;
+//         opacity: 0.85;
+//         strong{
+//             font-weight: bolder;
+//         }
+//         .desc-detail{
+//             margin-top: 20px;
+//             p {
+//                 font-size: 18px;
+//                 margin-bottom: 0;
+//             }
+//         }
+//     }
+//     .phase-video{
+//         height: 100%;
+//         width: 70%;
+//         video {
+//             height: 100%;
+//             width: 100%;
+//             object-fit: cover;
+//         }
+//     }
+// }
+
+// .phase-1{
+
+//     // background-image: url("../assets/phase1-bg.png");
+//     // color: #fff;
+//     background-image: url("../../assets/phase1-bg.png");  
+//     background-size: 100%;
+// }
+
+// .phase-2{
+
+//     // background-image: url("../assets/phase1-bg.png");
+//     // color: #fff;
+//     background-image: url("../../assets/phase2-bg.png");  
+//     background-size: 100%;
+// }
+
+// .phase-3{
+
+//     // background-image: url("../assets/phase1-bg.png");
+//     // color: #fff;
+//     background-image: url("../../assets/phase3-bg.png");  
+//     background-size: 100%;
+// }
+
+// .phase-4{
+
+//     // background-image: url("../assets/phase1-bg.png");
+//     // color: #fff;
+//     background-image: url("../../assets/phase4-bg.png");  
+//     background-size: 100%;
+//     margin-bottom: 200px;
+// }
+
+.phase-container{
+    // height: 200px;
+    margin-top: 101px;
     height: 650px;
-    margin-top: 150px;
-    // border: 1px solid gold;
-    transform: translate(-50%,0);
-    margin-left: 50%;
-    display: flex;
-    flex-direction: row;
-    .phase-desc{
-        font-family: "Exo", sans-serif;
-        color: white;
-        font-size: 20px;
-        width: 45%;
-        margin-top: 2%;
-        line-height: 30px;
-        font-weight: 700;
-        opacity: 0.85;
-        strong{
-            font-weight: bolder;
-        }
-        .desc-detail{
-            margin-top: 20px;
-            p {
-                font-size: 18px;
-                margin-bottom: 0;
-            }
-        }
+    width: 100%;
+    position: relative;
+    // background-color: red;
+    .img{
+        height: 100%;
+        width: 100%;
     }
     .phase-video{
         height: 100%;
-        width: 70%;
+        width: 55%;
         video {
             height: 100%;
             width: 100%;
             object-fit: cover;
         }
     }
-}
-
-.phase-1{
-
-    // background-image: url("../assets/phase1-bg.png");
-    // color: #fff;
-    background-image: url("../../assets/phase1-bg.png");  
-    background-size: 100%;
-}
-
-.phase-2{
-
-    // background-image: url("../assets/phase1-bg.png");
-    // color: #fff;
-    background-image: url("../../assets/phase2-bg.png");  
-    background-size: 100%;
-}
-
-.phase-3{
-
-    // background-image: url("../assets/phase1-bg.png");
-    // color: #fff;
-    background-image: url("../../assets/phase3-bg.png");  
-    background-size: 100%;
-}
-
-.phase-4{
-
-    // background-image: url("../assets/phase1-bg.png");
-    // color: #fff;
-    background-image: url("../../assets/phase4-bg.png");  
-    background-size: 100%;
-    margin-bottom: 200px;
+    .phase-left-video{
+        position: absolute;
+        left: 0;
+        top: 0;
+    }
+    .phase-right-video{
+        position: absolute;
+        right: 0;
+        top: 0; 
+    }
+    .phase-content{
+        font-size: 16px;
+        margin-top: 20px;
+        width: 43%;
+        .desc-detail{
+            margin-top: 20px;
+            p {
+                font-size: 14px;
+                margin-bottom: 0;
+            }
+        }
+    }
+    .phase-content-left{
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+    .phase-content-right{
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
 }
 .ml {
     margin-right: 6%;
@@ -330,3 +394,4 @@ $btn-font-color:#1145d7;
         }
     }
 }
+
